[gd_scene load_steps=2 format=3 uid="uid://cnhlvtdp0v88x"]

[ext_resource type="Script" path="res://scripts/components/VideoConversionDialog.gd" id="1_2j5gv"]

[node name="VideoConversionDialog" type="AcceptDialog"]
title = "Converting Video"
initial_position = 2
size = Vector2i(500, 300)
unresizable = false
script = ExtResource("1_2j5gv")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -49.0

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Converting Video File"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="SourceLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Source: "
autowrap_mode = 3

[node name="TargetLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Target: "
autowrap_mode = 3

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Preparing conversion..."
horizontal_alignment = 1

[node name="ProgressContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer/ProgressContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 100.0
show_percentage = true

[node name="ProgressLabel" type="Label" parent="VBoxContainer/ProgressContainer"]
layout_mode = 2
text = "0% complete"
horizontal_alignment = 1

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="CancelButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Cancel"

[connection signal="pressed" from="VBoxContainer/ButtonContainer/CancelButton" to="." method="_on_cancel_button_pressed"]